# KGFlow

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
dataflow/: __init__.py  cli.py  logger.py  version.py
dataflow/cli_funcs/: README.md  __init__.py  cli_env.py  cli_init.py  cli_json2kg.py
dataflow/cli_funcs/json2kg/: autoschemakg_baseline.py  evaluate_general_entailment.py  input.jsonl  kggen_baseline.py  treekg_baseline.py  wikontic_baseline.py
dataflow/example/KGEvaluationPipeline/: input.json
dataflow/example/KGExtractionPipeline/: input.json  input_finance.jsonl  input_legal.jsonl  input_medical.jsonl  input_temporal.jsonl  input_wikigeneral.jsonl
dataflow/operators/evaluate/: __init__.py  cskg_triple_adaptability_eval.py  cskg_triple_rationale_eval.py  geokg_event_consistence_eval.py  geokg_event_rationale_eval.py  geokg_event_summary.py  hrkg_rel_triple_attri_summary.py  hrkg_rel_triple_completeness_eval.py  hrkg_rel_triple_consistency_eval.py  kg_rel_triple_consistency_eval.py  kg_rel_triple_inference.py  kg_rel_triple_nx_visual.py  kg_rel_triple_strength_eval.py  kg_rel_triple_topology_eval.py  kg_subgraph_connectivity_eval.py  kg_subgraph_consistence_eval.py  kg_subgraph_scale_eval.py  kg_triple_hallucination_eval.py  kg_triple_redundancy_eval.py  tkg_4tuple_time_summary.py
dataflow/operators/filter/: __init__.py  cskg_triple_adaptability_filtering.py  cskg_triple_rationale_filtering.py  domain_kg_tuple_ontology_filtering.py  geokg_event_consistence_filtering.py  geokg_event_location_filtering.py  geokg_event_rationale_filtering.py  geokg_event_time_filtering.py  hrkg_rel_triple_attri_filtering.py  hrkg_rel_triple_completeness_filtering.py  hrkg_rel_triple_consistency_filtering.py  kg_entity_validation.py  kg_rel_triple_merge_infered.py  kg_rel_triple_strength_filtering.py  kg_tuple_remove_repeated.py  kg_tuple_validation.py  tkg_4tuple_time_sampling.py
dataflow/operators/generate/: __init__.py  cskg_triple_extractor.py  finkg_4tuple_extractor.py  geokg_4tuple_extractor.py  geokg_event_extractor.py  hrkg_rel_triple_extractor.py  kg_entity_extractor.py  kg_triple_extractor.py  kg_triple_merge.py  kg_tuple2text.py  legalkg_triple_extractor.py  medkg_triple_extractor.py  tkg_4tuple_extractor.py  tkg_4tuple_merge.py
dataflow/operators/refine/: __init__.py  (+12 more)
dataflow/serving/: __init__.py
dataflow/utils/: storage.py
(+73 files in other folders)
