[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KGFlow"
authors = [
    {name = "Zhengpin Li", email = "zpli@pku.edu.cn"},
    {name = "Wanpeng Tang", email = "2023090910014@std.uestc.edu.cn"}
]
description = "KGFlow: A Unified Operator-Centric System for Automated Knowledge Graph Construction"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7, <4"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: Free For Educational Use",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = [
    "Artificial Intelligence",
    "Knowledge Graph",
]
dynamic = ["version", "dependencies"]

[project.urls]
Github = "https://github.com/ZhP-Li197/KGFlow"
Documentation = "https://open-dataflow.github.io/DataFlow-Doc/"
"Bug Reports" = "https://github.com/ZhP-Li197/KGFlow/issues"

[project.scripts]
text2kg = "dataflow.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["dataflow"]  # 显式指定主包


[tool.setuptools.dynamic]
version = {attr = "dataflow.version.__version__"}
dependencies = {file = "requirements.txt"}


[project.optional-dependencies]
vllm =["vllm>=0.7.0,<=0.9.2", "numpy<2.0.0"]
vllm07 = ["vllm<0.8", "numpy<2.0.0"]
vllm08 = ["vllm<0.9"]
# 要求numpy版本大于1.24小于2.0.0
kbc = ["vllm==0.6.3", "mineru[pipeline]==2.0.6"]
mineru = ["mineru[all]", "numpy>=1.24,<2.0.0", "sglang[all]>=0.4.8", "pypdf", "reportlab"]
myscale = ["clickhouse-driver"]
sglang =["sglang[all]"]
litellm = ["litellm>=1.70.0,<2.0.0"]
audio = ['librosa']
vectorsql = ["sqlite-vec", "sqlite-lembed", "sentence_transformers"]
# 当前pdf2model环境不支持muxi
pdf2model =[
    "llamafactory[torch,metrics]>=0.9.0",
    "vllm>=0.7.0,<0.9.2", 
    "numpy>=1.24,<2.0.0",
    "mineru[pipeline]",
    "mineru-vl-utils"
]
eval =[
    "vllm>=0.7.0,<0.9.2"
]
rag = ["lightrag-hku", "asyncio"]